Summary of important user-visible changes for specfun 1.2.0:
-------------------------------------------------------------------

 ** The following functions are new:

      big_factorial  lfactorial

 ** The function `combs' (just imported from the combinatorics package)
    has been deprecated in favour of `nchoosek' from Octave-core which
    should perform faster. The only difference is that it does accept
    string arrays (which does not make a lot of sense in the first place).
    To workaround this, the following can be used:
    
      char (nchoosek (double (n_string), k))

Summary of important user-visible changes for specfun 1.1.0:
-------------------------------------------------------------------

 ** The following functions are new:

      laplacian  multinom  multinom_coeff  multinom_exp

 ** The following function was removed since it is now part of
    GNU octave core:

      erfcx

 ** Help text of most functions has been improved

 ** The function `ellipj' was replaced by a C++ implementation that
    should perform faster.