@@ -5,6 +5,11 @@ Summary of important user-visible changes for specfun 1.2.0:
 
       big_factorial  lfactorial
 
+ ** The following functions have removed since they now are part of
+    Octave core:
+
+      erfcinv
+
  ** The function `combs' (just imported from the combinatorics package)
     has been deprecated in favour of `nchoosek' from Octave-core which
     should perform faster. The only difference is that it does accept
